[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/custom_ColorPicker.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_elements/pieces/star.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/star_shape_toggle.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/font_main.tres" type="DynamicFont" id=5]
[ext_resource path="res://GUI/menus/player_settings_editor.gd" type="Script" id=6]
[ext_resource path="res://ASSETS/board/hex.png" type="Texture" id=7]

[node name="player_settings_editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
margin_left = -37.7979
margin_top = -28.041
margin_right = 839.202
margin_bottom = 764.959
color = Color( 0.25098, 0.141176, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="display_port" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frame" type="ColorRect" parent="display_port"]
margin_left = 50.0
margin_top = 50.0
margin_right = 325.0
margin_bottom = 325.0
color = Color( 0.529412, 0.176471, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fill" type="ColorRect" parent="display_port"]
margin_left = 55.0
margin_top = 55.0
margin_right = 320.0
margin_bottom = 320.0
color = Color( 0.25098, 0.141176, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Node2D" parent="display_port"]
position = Vector2( 125, 240 )

[node name="frame" type="Sprite" parent="display_port/A"]
modulate = Color( 0.529412, 0.176471, 0.137255, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="fill" type="Sprite" parent="display_port/A"]
modulate = Color( 0.513726, 0.631373, 0.760784, 1 )
scale = Vector2( 1.92, 1.92 )
texture = ExtResource( 7 )

[node name="B" type="Node2D" parent="display_port"]
position = Vector2( 250, 240 )

[node name="frame" type="Sprite" parent="display_port/B"]
modulate = Color( 0.529412, 0.176471, 0.137255, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="fill" type="Sprite" parent="display_port/B"]
modulate = Color( 0.968627, 0.952941, 0.890196, 1 )
scale = Vector2( 1.92, 1.92 )
texture = ExtResource( 7 )

[node name="C" type="Node2D" parent="display_port"]
position = Vector2( 187.5, 130 )

[node name="frame" type="Sprite" parent="display_port/C"]
modulate = Color( 0.529412, 0.176471, 0.137255, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="fill" type="Sprite" parent="display_port/C"]
modulate = Color( 0.74902, 0.603922, 0.329412, 1 )
scale = Vector2( 1.92, 1.92 )
texture = ExtResource( 7 )

[node name="frame" type="VBoxContainer" parent="."]
margin_left = 49.4388
margin_top = 50.0
margin_right = 749.439
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="frame"]
visible = false
margin_right = 700.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
custom_fonts/normal_font = ExtResource( 5 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
bbcode_enabled = true
bbcode_text = "title"
text = "title"

[node name="sample_stars" type="Node2D" parent="."]

[node name="A" parent="sample_stars" instance=ExtResource( 3 )]

[node name="B" parent="sample_stars" instance=ExtResource( 3 )]

[node name="C" parent="sample_stars" instance=ExtResource( 3 )]

[node name="background2" type="ColorRect" parent="."]
margin_left = 22.2647
margin_top = 420.304
margin_right = 388.265
margin_bottom = 661.304
color = Color( 0.25098, 0.141176, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="custom_ColorPicker" parent="." instance=ExtResource( 1 )]
margin_left = 74.0973
margin_top = 133.131
margin_right = 382.098
margin_bottom = 595.131

[node name="name_entry" type="LineEdit" parent="."]
margin_left = 69.6132
margin_top = 427.235
margin_right = 344.613
margin_bottom = 457.235
expand_to_text_length = true
placeholder_text = "player name here"
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shape_toggles" type="Node2D" parent="."]
position = Vector2( -48.7353, 58.304 )

[node name="_5" parent="shape_toggles" instance=ExtResource( 4 )]
position = Vector2( 116.831, 559.512 )

[node name="_6" parent="shape_toggles" instance=ExtResource( 4 )]
position = Vector2( 182.518, 559.512 )

[node name="_7" parent="shape_toggles" instance=ExtResource( 4 )]
position = Vector2( 253.502, 559.512 )

[node name="_8" parent="shape_toggles" instance=ExtResource( 4 )]
position = Vector2( 327.664, 559.512 )

[node name="_9" parent="shape_toggles" instance=ExtResource( 4 )]
position = Vector2( 402.886, 559.512 )

[node name="cursor" parent="." instance=ExtResource( 2 )]
[connection signal="color_changed" from="custom_ColorPicker" to="." method="_on_ColorPicker_color_changed"]
